@@ -48,6 +48,7 @@ CREATE TABLE tx_cart_domain_model_product_product (
     related_products int(11) DEFAULT '0' NOT NULL,
     related_products_from int(11) DEFAULT '0' NOT NULL,
 
+    main_category int(11) unsigned DEFAULT '0' NOT NULL,
     categories int(11) unsigned DEFAULT '0' NOT NULL,
     tags int(11) DEFAULT '0' NOT NULL,
 
